--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,3 +1,3 @@
-owner: LinJiaHongAlan
-repo: electron-note
-provider: github
+provider: generic
+url: http://172.168.50.235:3332/win32
+updaterCacheDirName: electron-note-updater
